add media query to increase readability on mobile

--- a/responsive-design-lab/app/styles/main.css
+++ b/responsive-design-lab/app/styles/main.css
@@ -13,7 +13,12 @@
 
 /* TODO 3 - style the page */
 
-/* TODO 4 - use media query */
+@media screen and (max-width: 48rem) {
+  .container .col {
+    width: 95%;
+  }
+}
+
 
 /* TODO 5.2 - use flexbox */
 
