--- a/responsive-design-lab/app/styles/main.css
+++ b/responsive-design-lab/app/styles/main.css
@@ -35,7 +35,11 @@
 }
 
 
-
-
-
-/* TODO 5.4 - use media query with Flexbox*/
+@media screen and (max-width: 48rem) {
+  .container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    flex-flow: column;
+  }
+}
